Code Refactor, Bilaterial Filter, Gaussian Filter, Rayleigh Noise, UI changes.

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,13 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>  </dependencies>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>11.0.2</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
@@ -118,7 +124,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.imageprocessingjx.imageprocessingjx/com.imageprocessingjx.imageprocessingjx.HelloApplication</mainClass>
+              <mainClass>com.imageprocessingjx.imageprocessingjx/com.imageprocessingjx.imageprocessingjx.ApplicationClass</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
