--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
       <artifactId>javafx-swing</artifactId>
       <version>11.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>13.0</version>
+    </dependency>
   </dependencies>
 
   <build>
